--- a/templates/template-recipe.html
+++ b/templates/template-recipe.html
@@ -4,7 +4,7 @@
     <span class="metadata-recipe">
       <span class="author-recipe"> NOMBRE DEL AUTO DE LA RECETA (ATRIBUTO "source.name") </span>
       <span class="bookmarks-recipe">
-        <span class="icon-bookmark"></span> 
+        <span class=""></span> 
       </span>
     </span>
   </span>
